syntax = "proto3";
option csharp_namespace = "CSSimulator";

message MessageFromCharger {
	string msg = 1;
	string from = 2;
}